--- a/index.html
+++ b/index.html
@@ -7,6 +7,254 @@
         <link rel="stylesheet" href="style.css" />
     </head>
     <body>
-        <h1>Главная</h1>
+        <header class="header">
+            <div class="container">
+                <div class="header-wrapper">
+                    <div class="header-content">
+                        <a href="/" class="header-logo">
+                            <img src="img/logo.png" alt="" />
+                        </a>
+                        <div class="header-search">
+                            <img src="img/search.svg" alt="" />
+                        </div>
+                    </div>
+                    <div class="header-navigation">
+                        <div class="header-menu">
+                            <div class="header-burger">
+                                <img src="img/burger.svg" alt="" />
+                            </div>
+                            <div class="menu">
+                                <div class="menu-title">MENU</div>
+                                <div class="menu-wrapper">
+                                    <a href="" class="menu-categories">MAN</a>
+                                    <div class="menu-links">
+                                        <a href="" class="menu-link">Accessories</a>
+                                        <a href="" class="menu-link">Bags</a>
+                                        <a href="" class="menu-link">Denim</a>
+                                        <a href="" class="menu-link">T-Shirts</a>
+                                    </div>
+                                    <a href="" class="menu-categories">WOMAN</a>
+                                    <div class="menu-links">
+                                        <a href="" class="menu-link">Accessories</a>
+                                        <a href="" class="menu-link">Jackets & Coats</a>
+                                        <a href="" class="menu-link">Polos</a>
+                                        <a href="" class="menu-link">T-Shirts</a>
+                                        <a href="" class="menu-link">Shirts</a>
+                                    </div>
+                                    <a href="" class="menu-categories">KIDS</a>
+                                    <div class="menu-links">
+                                        <a href="" class="menu-link">Accessories</a>
+                                        <a href="" class="menu-link">Jackets & Coats</a>
+                                        <a href="" class="menu-link">Polos</a>
+                                        <a href="" class="menu-link">T-Shirts</a>
+                                        <a href="" class="menu-link">Shirts</a>
+                                        <a href="" class="menu-link">Bags</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="header-login">
+                            <img src="img/login.svg" alt="" />
+                        </div>
+                        <div class="header-cart">
+                            <div class="header-cart__img">
+                                <img src="img/cart.svg" alt="" />
+                            </div>
+                            <div class="header-cart__overlay"></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </header>
+        <main class="main">
+            <div class="main-intro intro">
+                <div class="container">
+                    <div class="intro-wrapper">
+                        <div class="intro-img">
+                            <img src="img/slider-img.png" alt="" />
+                        </div>
+                        <div class="intro-info">
+                            <div class="intro-title">THE BRAND</div>
+                            <div class="intro-text">OF LUXERIOUS <span>FASHION</span></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="main-offer offer">
+                <div class="container">
+                    <div class="offer-wrapper">
+                        <div class="offer-item">
+                            <div class="offer-item__img">
+                                <img src="img/offer-1.png" alt="" />
+                            </div>
+                            <div class="offer-item__text">30% OFF</div>
+                            <div class="offer-item__title">FOR WOMEN</div>
+                        </div>
+                        <div class="offer-item">
+                            <div class="offer-item__img">
+                                <img src="img/offer-2.png" alt="" />
+                            </div>
+                            <div class="offer-item__text">HOT DEAL</div>
+                            <div class="offer-item__title">FOR MEN</div>
+                        </div>
+                        <div class="offer-item">
+                            <div class="offer-item__img">
+                                <img src="img/offer-3.png" alt="" />
+                            </div>
+                            <div class="offer-item__text">NEW ARRIVALS</div>
+                            <div class="offer-item__title">FOR KIDS</div>
+                        </div>
+                        <div class="offer-item">
+                            <div class="offer-item__img">
+                                <img src="img/offer-4.png" alt="" />
+                            </div>
+                            <div class="offer-item__text">LUXIROUS & TRENDY</div>
+                            <div class="offer-item__title">ACCESORIES</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="main-products products">
+                <div class="container">
+                    <div class="products-title">Fetured Items</div>
+                    <div class="products-text">Shop for items based on what we featured in this week</div>
+                    <div class="products-wrapper">
+                        <div class="products-item">
+                            <div class="products-item__img">
+                                <img src="img/products-1.jpg" alt="" />
+                            </div>
+                            <div class="products-item__content">
+                                <a href="/" class="products-item__title">ELLERY X M'O CAPSULE</a>
+                                <div class="products-item__decs">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</div>
+                                <div class="products-item__price">$52.00</div>
+                            </div>
+                        </div>
+                        <div class="products-item">
+                            <div class="products-item__img">
+                                <img src="img/products-2.png" alt="" />
+                            </div>
+                            <div class="products-item__content">
+                                <a href="/" class="products-item__title">ELLERY X M'O CAPSULE</a>
+                                <div class="products-item__decs">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</div>
+                                <div class="products-item__price">$52.00</div>
+                            </div>
+                        </div>
+                        <div class="products-item">
+                            <div class="products-item__img">
+                                <img src="img/products-3.png" alt="" />
+                            </div>
+                            <div class="products-item__content">
+                                <a href="/" class="products-item__title">ELLERY X M'O CAPSULE</a>
+                                <div class="products-item__decs">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</div>
+                                <div class="products-item__price">$52.00</div>
+                            </div>
+                        </div>
+                        <div class="products-item">
+                            <div class="products-item__img">
+                                <img src="img/products-4.png" alt="" />
+                            </div>
+                            <div class="products-item__content">
+                                <a href="/" class="products-item__title">ELLERY X M'O CAPSULE</a>
+                                <div class="products-item__decs">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</div>
+                                <div class="products-item__price">$52.00</div>
+                            </div>
+                        </div>
+                        <div class="products-item">
+                            <div class="products-item__img">
+                                <img src="img/products-5.png" alt="" />
+                            </div>
+                            <div class="products-item__content">
+                                <a href="/" class="products-item__title">ELLERY X M'O CAPSULE</a>
+                                <div class="products-item__decs">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</div>
+                                <div class="products-item__price">$52.00</div>
+                            </div>
+                        </div>
+                        <div class="products-item">
+                            <div class="products-item__img">
+                                <img src="img/products-6.png" alt="" />
+                            </div>
+                            <div class="products-item__content">
+                                <a href="/" class="products-item__title">ELLERY X M'O CAPSULE</a>
+                                <div class="products-item__decs">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</div>
+                                <div class="products-item__price">$52.00</div>
+                            </div>
+                        </div>
+                    </div>
+                    <a href="/" class="products-link">Browse All Product</a>
+                </div>
+            </div>
+            <div class="main-feature feature">
+                <div class="container">
+                    <div class="feature-wrapper">
+                        <div class="feature-item">
+                            <div class="feature-item__img">
+                                <img src="img/feature-1.svg" alt="" />
+                            </div>
+                            <div class="feature-item__title">Free Delivery</div>
+                            <div class="feature-item__text">Worldwide delivery on all. Authorit tively morph next-generation innov tion with extensive models.</div>
+                        </div>
+                        <div class="feature-item">
+                            <div class="feature-item__img">
+                                <img src="img/feature-2.png" alt="" />
+                            </div>
+                            <div class="feature-item__title">Sales & discounts</div>
+                            <div class="feature-item__text">Worldwide delivery on all. Authorit tively morph next-generation innov tion with extensive models.</div>
+                        </div>
+                        <div class="feature-item">
+                            <div class="feature-item__img">
+                                <img src="img/feature-3.png" alt="" />
+                            </div>
+                            <div class="feature-item__title">Quality assurance</div>
+                            <div class="feature-item__text">Worldwide delivery on all. Authorit tively morph next-generation innov tion with extensive models.</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="main-subscribe subscribe">
+                <div class="container">
+                    <div class="subscribe-wrapper">
+                        <div class="subscribe-info">
+                            <div class="subscribe-img">
+                                <img src="img/subscribe-avatar.png" alt="" />
+                            </div>
+                            <div class="subscribe-text">“Vestibulum quis porttitor dui! Quisque viverra nunc mi, a pulvinar purus condimentum“</div>
+                        </div>
+                        <div class="subscribe-form">
+                            <div class="subscribe-form__title">SUBSCRIBE</div>
+                            <div class="subscribe-form__text">FOR OUR NEWLETTER AND PROMOTION</div>
+                            <div class="subscribe-form__wrapper form">
+                                <input class="form-input" type="text" name="" id="mail" />
+                                <div class="form-btn">Subscribe</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </main>
+        <footer class="footer">
+            <div class="container">
+                <div class="footer-wrapper">
+                    <div class="footer-copy">
+                        ©
+                        <div class="footer-copy__date">2022</div>
+                        Brand All Rights Reserved.
+                    </div>
+                    <div class="footer-socials">
+                        <a href="/" class="footer-social fb">
+                            <img src="img/fb.svg" alt="" />
+                        </a>
+                        <a href="/" class="footer-social inst">
+                            <img src="img/inst.png" alt="" />
+                        </a>
+                        <a href="/" class="footer-social social">
+                            <img src="img/pinterest.png" alt="" />
+                        </a>
+                        <a href="/" class="footer-social twitter">
+                            <img src="img/twitter.png" alt="" />
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </footer>
     </body>
 </html>
