--- a/index.html
+++ b/index.html
@@ -26,29 +26,35 @@
                             <div class="menu">
                                 <div class="menu-title">MENU</div>
                                 <div class="menu-wrapper">
-                                    <a href="" class="menu-categories">MAN</a>
-                                    <div class="menu-links">
-                                        <a href="" class="menu-link">Accessories</a>
-                                        <a href="" class="menu-link">Bags</a>
-                                        <a href="" class="menu-link">Denim</a>
-                                        <a href="" class="menu-link">T-Shirts</a>
+                                    <div class="menu-categories__wrapper">
+                                        <a href="" class="menu-categories">MAN</a>
+                                        <div class="menu-links">
+                                            <a href="" class="menu-link">Accessories</a>
+                                            <a href="" class="menu-link">Bags</a>
+                                            <a href="" class="menu-link">Denim</a>
+                                            <a href="" class="menu-link">T-Shirts</a>
+                                        </div>
                                     </div>
-                                    <a href="" class="menu-categories">WOMAN</a>
-                                    <div class="menu-links">
-                                        <a href="" class="menu-link">Accessories</a>
-                                        <a href="" class="menu-link">Jackets & Coats</a>
-                                        <a href="" class="menu-link">Polos</a>
-                                        <a href="" class="menu-link">T-Shirts</a>
-                                        <a href="" class="menu-link">Shirts</a>
+                                    <div class="menu-categories__wrapper">
+                                        <a href="" class="menu-categories">WOMAN</a>
+                                        <div class="menu-links">
+                                            <a href="" class="menu-link">Accessories</a>
+                                            <a href="" class="menu-link">Jackets & Coats</a>
+                                            <a href="" class="menu-link">Polos</a>
+                                            <a href="" class="menu-link">T-Shirts</a>
+                                            <a href="" class="menu-link">Shirts</a>
+                                        </div>
                                     </div>
-                                    <a href="" class="menu-categories">KIDS</a>
-                                    <div class="menu-links">
-                                        <a href="" class="menu-link">Accessories</a>
-                                        <a href="" class="menu-link">Jackets & Coats</a>
-                                        <a href="" class="menu-link">Polos</a>
-                                        <a href="" class="menu-link">T-Shirts</a>
-                                        <a href="" class="menu-link">Shirts</a>
-                                        <a href="" class="menu-link">Bags</a>
+                                    <div class="menu-categories__wrapper">
+                                        <a href="" class="menu-categories">KIDS</a>
+                                        <div class="menu-links">
+                                            <a href="" class="menu-link">Accessories</a>
+                                            <a href="" class="menu-link">Jackets & Coats</a>
+                                            <a href="" class="menu-link">Polos</a>
+                                            <a href="" class="menu-link">T-Shirts</a>
+                                            <a href="" class="menu-link">Shirts</a>
+                                            <a href="" class="menu-link">Bags</a>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
@@ -222,10 +228,10 @@
                         <div class="subscribe-form">
                             <div class="subscribe-form__title">SUBSCRIBE</div>
                             <div class="subscribe-form__text">FOR OUR NEWLETTER AND PROMOTION</div>
-                            <div class="subscribe-form__wrapper form">
-                                <input class="form-input" type="text" name="" id="mail" />
-                                <div class="form-btn">Subscribe</div>
-                            </div>
+                            <form class="subscribe-form__wrapper form">
+                                <input class="form-input" type="text" name="" id="mail" placeholder="Enter Your Email" />
+                                <button type="submit" class="form-btn">Subscribe</button>
+                            </form>
                         </div>
                     </div>
                 </div>
@@ -236,7 +242,7 @@
                 <div class="footer-wrapper">
                     <div class="footer-copy">
                         ©
-                        <div class="footer-copy__date">2022</div>
+                        <span class="footer-copy__date">2022</span>
                         Brand All Rights Reserved.
                     </div>
                     <div class="footer-socials">
