вывод товаров с помощью json файла

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
             </div>
             <div class="main-products products">
                 <div class="container">
-                    <div class="products-title">Fetured Items</div>
+                    <div class="products-title">Fetured Items 2</div>
                     <div class="products-text">Shop for items based on what we featured in this week</div>
                     <div class="products-wrapper"></div>
                     <a href="catalog.html" class="products-link">Browse All Product</a>
