modified:   cart.html 	modified:   catalog.html 	modified:   index.html 	modified:   products.html 	modified:   registration.html
	modified:   css/style.css
	modified:   css/style.css.map
	modified:   css/style.scss
	modified:   js/script.js

--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                 <div class="container">
                     <div class="products-title">Fetured Items</div>
                     <div class="products-text">Shop for items based on what we featured in this week</div>
-                    <div class="products-wrapper"></div>
+                    <div class="products-wrapper home-products"></div>
                     <a href="catalog.html" class="products-link">Browse All Product</a>
                 </div>
             </div>
