--- a/catalog.html
+++ b/catalog.html
@@ -65,12 +65,43 @@
                         <a href="registration.html" class="header-login">
                             <img src="img/home/login.svg" alt="" />
                         </a>
-                        <a href="cart.html" class="header-cart">
-                            <div class="header-cart__img">
+                        <div class="header-cart">
+                            <a href="cart.html" class="header-cart__img">
+                                <div class="header-cart__img-count">0</div>
                                 <img src="img/home/cart.svg" alt="" />
+                            </a>
+                            <div class="header-cart__overlay active">
+                                <div class="header-cart__overlay-text">Корзина пуста</div>
+                                <div class="cart-wrapper">
+                                    <div class="cart-goods">
+                                        <div class="cart-goods__btns">
+                                            <div class="cart-goods__btn clear">CLEAR SHOPPING CART</div>
+                                            <div class="cart-goods__btn contine">CONTINUE SHOPPING</div>
+                                        </div>
+                                    </div>
+                                    <div class="cart-info">
+                                        <div class="cart-title">SHIPPING ADRESS</div>
+                                        <form class="cart-form">
+                                            <input type="text" class="cart-form__input" placeholder="Bangladesh" />
+                                            <input type="text" class="cart-form__input" placeholder="State" />
+                                            <input type="text" class="cart-form__input" placeholder="Postcode / Zip" />
+                                            <button type="submit" class="cart-form__btn">GET A QUOTE</button>
+                                        </form>
+                                        <div class="cart-pay">
+                                            <div class="cart-pay__top">
+                                                <span>SUB TOTAL </span>
+                                                <span>$</span>
+                                            </div>
+                                            <div class="cart-pay__bot">
+                                                <span>GRAND TOTAL</span>
+                                                <span class="cart-pay__total">$<span></span></span>
+                                            </div>
+                                            <div class="cart-pay__bnt">PROCEED TO CHECKOUT</div>
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
-                            <div class="header-cart__overlay"></div>
-                        </a>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -165,21 +196,12 @@
                             </div>
                         </div>
                     </div>
-                    <div class="products-wrapper"></div>
+                    <div class="products-wrapper catalog-products"></div>
                     <div class="products-pag">
                         <div class="products-pag__prev">
                             <img src="img/home/pag-left.png" alt="" />
                         </div>
-                        <div class="products-pag__nums">
-                            <a href="catalog.html" class="products-pag__num active">1</a>
-                            <a href="catalog.html" class="products-pag__num">2</a>
-                            <a href="catalog.html" class="products-pag__num">3</a>
-                            <a href="catalog.html" class="products-pag__num">4</a>
-                            <a href="catalog.html" class="products-pag__num">5</a>
-                            <a href="catalog.html" class="products-pag__num">6</a>
-                            <div class="products-pag__num-dots">...</div>
-                            <a href="catalog.html" class="products-pag__num products-pag__num_last">20</a>
-                        </div>
+                        <div class="products-pag__nums"></div>
                         <div class="products-pag__next">
                             <img src="img/home/pag-right.png" alt="" />
                         </div>
